reinvent the wheel by using backend to handle mcq check
